Issue by month bar chart and latest 6 issues in home page

--- a/cityfix-frontend/src/index.css
+++ b/cityfix-frontend/src/index.css
@@ -220,3 +220,13 @@
     #312E81 100%
   );
 }
+
+.cl {
+  color : #0369c2;
+  color : #029d33;
+  color : #02a083;
+  color : #edab05;
+  color : #d74c4c;
+  color : #9002c0;
+  color : #29a59d;
+}
