--- a/cityfix-frontend/src/index.css
+++ b/cityfix-frontend/src/index.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @import "tailwindcss";
 @plugin "daisyui";
+
 
 .active{
   color: #2563EB;
@@ -7,6 +10,10 @@
   /* padding: 5px 9px; */
   border-radius: 10px;
   font-weight: 500;
+}
+
+body{
+  font-family: "Poppins", sans-serif;
 }
 
 /* LIGHT THEME */
